--- a/.drone.yml
+++ b/.drone.yml
@@ -3,7 +3,7 @@ name: default
 
 steps:
 - name: test
-  image: maven:3-jdk-10
+  image: maven:3.8.6-openjdk-11
   commands:
-  - mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
-  - mvn test -B
+  - mvn clean install  -DskipTests
+  - mvn surefire-report:report
